# OperatingSystemCurriculumDesign

./: .gitignore  CMakeLists.txt
ShellSimulation/: CMakeLists.txt  ShellSimulation.sln
ShellSimulation/ShellSimulation/: CMakeLists.txt  Cmd.cpp  Command.cpp  Command.h  Console.cpp  Console.h  Public.cpp  ShellSimulation.vcxproj  ShellSimulation.vcxproj.filters  SingleTon.h  cmd.cpp  cmd.h  main.cpp  mycat.cpp  mycp.cpp  myecho.cpp
ShellSimulation/include/: MultiThreadSort.h  Public.h
ShellSimulation/mycat/: mycat.cpp  mycat.vcxproj.filters
ShellSimulation/mycp/: mycp.cpp
ShellSimulation/myecho/: myecho.cpp  myecho.vcxproj.filters
ShellSimulation/src/: CMakeLists.txt
ShellSimulation/src/Data/: Data.cpp
ShellSimulation/src/PCBuffer/: PCBuffer.cpp
ShellSimulation/src/SafePthreadExtra/: SafePthreadExtra.cpp
ShellSimulation/src/ShellSimulation/: Cmd.cpp  Cmd.h  Command.cpp  Command.h  Console.cpp  Console.h  ShellSimulation.vcxproj  ShellSimulation.vcxproj.filters  main.cpp
ShellSimulation/src/mycat/: CMakeLists.txt  mycat.cpp  mycat.vcxproj
ShellSimulation/src/mycp/: mycp.cpp  mycp.vcxproj  mycp.vcxproj.filters
ShellSimulation/src/myecho/: myecho.cpp  myecho.vcxproj
ShellSimulation/src/pc1/: CMakeLists.txt  PC1.h  main.cpp
ShellSimulation/src/pc2/: CMakeLists.txt  main.cpp
ShellSimulation/src/pi1/: pi1.cpp
ShellSimulation/src/pi2/: pi2.cpp
ShellSimulation/src/ring/: CMakeLists.txt  Ring.h  main.cpp
Test/: CMakeLists.txt
Test/include/: Data.h  MultiThreadSort.h  PCBuffer.h  PthreadExtra.h  SafePthreadExtra.h
Test/mycp/: mycp.cpp
Test/myecho/: CMakeLists.txt
Test/pi1/: pi1.cpp
Test/pi2/: pi2.cpp
Test/src/: CMakeLists.txt  main.cpp
Test/src/Data/: Data.cpp
Test/src/SafePthreadExtra/: CMakeLists.txt  PthreadExtra.cpp  SafePthreadExtra.cpp
Test/src/mycat/: mycat.cpp
Test/src/mycp/: CMakeLists.txt
Test/src/pc1/: CMakeLIsts.txt  CMakeLists.txt  PC1.cpp  PC1.h  main.cpp  pc1.cpp  pc1.h
Test/src/pc2/: CMakeLists.txt  PC2.cpp  PC2.h  main.cpp
Test/src/pi1/: CMakeLists.txt
Test/src/pi2/: CMakeLists.txt  pi2.cpp
Test/src/ring/: Ring.cpp  Ring.h  main.cpp
